# fast_qr

./: Cargo.toml  crates.js  qrgen.wasm  search-index.js  settings.html  source-files.js  wasm_build.sh
fast_qr/: all.html  enum.ECL.html  enum.Mask.html  enum.Version.html  fn.qr.html  fn.qr_opt.html  index.html  sidebar-items.js  struct.QROptions.html
fast_qr/convert/: index.html  sidebar-items.js
fast_qr/convert/svg/: enum.Shape.html  enum.SvgError.html  enum.SvgShape.html  index.html  sidebar-items.js  struct.SvgBuilder.html
fast_qr/datamasking/: enum.Mask.html
fast_qr/ecl/: enum.ECL.html  index.html  sidebar-items.js
fast_qr/qr/: enum.QRCode.html  enum.QRCodeError.html  index.html  sidebar-items.js  struct.QRBuilder.html  struct.QRCode.html
fast_qr/version/: enum.Version.html  index.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
src/: lib.rs
src/comptime/: lib.rs
src/fast_qr/: bitstring.rs.html  compact.rs.html  datamasking.rs.html  default.rs.html  ecl.rs.html  encode.rs.html  hardcode.rs.html  helpers.rs.html  lib.rs.html  module.rs.html  placement.rs.html  polynomials.rs.html  qr.rs.html  score.rs.html  version.rs.html
(+21 files in other folders)
