[package]
name = "qrgen"
version = "0.1.0"
authors = ["erwan.vivien <erwan.vivien@epita.fr>"]
edition = "2018"
description = "Generates QRCode for any type of data"
readme = "README.md"
repository = "https://github.com/erwanvivien/QR-Gen/"
keywords = ["qr", "qrcode", "qr generator", "qrcode generator",
            "qrgen"]
categories = ["multimedia", "multimedia::encoding", "multimedia::images"]
exclude = ["/src/tests/", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
debug = true
